# SqliteORM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simple.cpp
cmake/: FindSQLite3.cmake
include/: any.hpp  anylite.hpp  constants.hpp  query.hpp  record.hpp  sqlerror.hpp  table.hpp  transaction.hpp  xsqlite3.hpp  xsqlite3utils.hpp
src/: record.cpp  simple.cpp  transaction.cpp  xsqlite3.cpp  xsqlite3utils.cpp
tests/: CMakeLists.txt  Sample.cpp  TableTest.cpp  TimeTest.cpp
